Alignment and spacing fixes

--- a/.build/assets/styles/__blocks/_image.scss
+++ b/.build/assets/styles/__blocks/_image.scss
@@ -1,4 +1,6 @@
 .wp-block-image {
+    @extend .h-stack;
+
     .alignleft {
         margin-top: var(--unit-xsmall);
         margin-right: var(--unit);
